@@ -44,7 +44,7 @@ public final class FastMatcher {
                     file.getAbsolutePath() + "'.");
         }
         try {
-            loadTerms(file, GrobidAnalyzer.getInstance());
+            loadTerms(file, GrobidAnalyzer.getInstance(), false);
         } catch (Exception e) {
             throw new GrobidException("An exception occurred while running Grobid FastMatcher.", e);
         }
@@ -60,7 +60,23 @@ public final class FastMatcher {
                     file.getAbsolutePath() + "'.");
         }
         try {
-            loadTerms(file, analyzer);
+            loadTerms(file, analyzer, false);
+        } catch (Exception e) {
+            throw new GrobidException("An exception occurred while running Grobid FastMatcher.", e);
+        }
+    }
+
+    public FastMatcher(File file, org.grobid.core.analyzers.Analyzer analyzer, boolean caseSensitive) {
+        if (!file.exists()) {
+            throw new GrobidResourceException("Cannot add term to matcher, because file '" +
+                    file.getAbsolutePath() + "' does not exist.");
+        }
+        if (!file.canRead()) {
+            throw new GrobidResourceException("Cannot add terms to matcher, because cannot read file '" +
+                    file.getAbsolutePath() + "'.");
+        }
+        try {
+            loadTerms(file, analyzer, caseSensitive);
         } catch (Exception e) {
             throw new GrobidException("An exception occurred while running Grobid FastMatcher.", e);
         }
@@ -68,7 +84,7 @@ public final class FastMatcher {
 
     public FastMatcher(InputStream is) {
         try {
-            loadTerms(is, GrobidAnalyzer.getInstance());
+            loadTerms(is, GrobidAnalyzer.getInstance(), false);
         } catch (Exception e) {
             throw new GrobidException("An exception occurred while running Grobid FastMatcher.", e);
         }
@@ -76,7 +92,15 @@ public final class FastMatcher {
 
     public FastMatcher(InputStream is, org.grobid.core.analyzers.Analyzer analyzer) {
         try {
-            loadTerms(is, analyzer);
+            loadTerms(is, analyzer, false);
+        } catch (Exception e) {
+            throw new GrobidException("An exception occurred while running Grobid FastMatcher.", e);
+        }
+    }
+
+    public FastMatcher(InputStream is, org.grobid.core.analyzers.Analyzer analyzer, boolean caseSensitive) {
+        try {
+            loadTerms(is, analyzer, caseSensitive);
         } catch (Exception e) {
             throw new GrobidException("An exception occurred while running Grobid FastMatcher.", e);
         }
@@ -87,21 +111,29 @@ public final class FastMatcher {
      */
     public int loadTerms(File file) throws IOException {
         InputStream fileIn = new FileInputStream(file);
-        return loadTerms(fileIn, GrobidAnalyzer.getInstance());
+        return loadTerms(fileIn, GrobidAnalyzer.getInstance(), false);
     }
 
     /**
      * Load a set of terms to the fast matcher from a file listing terms one per line
      */
-    public int loadTerms(File file, org.grobid.core.analyzers.Analyzer analyzer) throws IOException {
+    public int loadTerms(File file, boolean caseSensitive) throws IOException {
         InputStream fileIn = new FileInputStream(file);
-        return loadTerms(fileIn, analyzer);
+        return loadTerms(fileIn, GrobidAnalyzer.getInstance(), caseSensitive);
+    }
+
+    /**
+     * Load a set of terms to the fast matcher from a file listing terms one per line
+     */
+    public int loadTerms(File file, org.grobid.core.analyzers.Analyzer analyzer, boolean caseSensitive) throws IOException {
+        InputStream fileIn = new FileInputStream(file);
+        return loadTerms(fileIn, analyzer, caseSensitive);
     }
 
     /**
      * Load a set of term to the fast matcher from an input stream
      */
-    public int loadTerms(InputStream is, org.grobid.core.analyzers.Analyzer analyzer) throws IOException {
+    public int loadTerms(InputStream is, org.grobid.core.analyzers.Analyzer analyzer, boolean caseSensitive) throws IOException {
         InputStreamReader reader = new InputStreamReader(is, UTF_8);
         BufferedReader bufReader = new BufferedReader(reader);
         String line;
@@ -115,7 +147,8 @@ public final class FastMatcher {
             if (line.length() == 0) continue;
             line = UnicodeUtil.normaliseText(line);
             line = StringUtils.normalizeSpace(line);
-            line = line.toLowerCase();
+            if (!caseSensitive)
+                line = line.toLowerCase();
             nbTerms += loadTerm(line, analyzer, true);
         }
         bufReader.close();
@@ -134,9 +167,17 @@ public final class FastMatcher {
 
 
     /**
-     * Load a term to the fast matcher
+     * Load a term to the fast matcher, by default the loading will be case sensitive
      */
     public int loadTerm(String term, org.grobid.core.analyzers.Analyzer analyzer, boolean ignoreDelimiters) {
+        return loadTerm(term, analyzer, ignoreDelimiters, true);
+    }
+
+
+    /**
+     * Load a term to the fast matcher
+     */
+    public int loadTerm(String term, org.grobid.core.analyzers.Analyzer analyzer, boolean ignoreDelimiters, boolean caseSensitive) {
         int nbTerms = 0;
         if (isBlank(term))
             return 0;
@@ -154,6 +195,9 @@ public final class FastMatcher {
             }
             if ( ignoreDelimiters && (delimiters.indexOf(token) != -1) ) {
                 continue;
+            }
+            if (!caseSensitive) {
+                token = token.toLowerCase();
             }
             Map t2 = (Map) t.get(token);
             if (t2 == null) {
@@ -185,6 +229,18 @@ public final class FastMatcher {
      * @return the list of offset positions of the matches, an empty list if no match have been found
      */
     public List<OffsetPosition> matchToken(String text) {
+        return matchToken(text, false);
+    }
+
+    /**
+     * Identify terms in a piece of text and gives corresponding token positions.
+     * All the matches are returned.
+     *
+     * @param text: the text to be processed
+     * @param caseSensitive: ensure case sensitive matching or not
+     * @return the list of offset positions of the matches, an empty list if no match have been found
+     */
+    public List<OffsetPosition> matchToken(String text, boolean caseSensitive) {
         List<OffsetPosition> results = new ArrayList<OffsetPosition>();
         List<Integer> startPos = new ArrayList<Integer>();
         List<Integer> lastNonSeparatorPos = new ArrayList<Integer>();
@@ -205,7 +261,8 @@ public final class FastMatcher {
                 continue;
             }*/
 
-            token = token.toLowerCase();
+            if (!caseSensitive) 
+                token = token.toLowerCase();
 
             // we try to complete opened matching
             int i = 0;
@@ -238,7 +295,7 @@ public final class FastMatcher {
             Map t2 = (Map) terms.get(token);
             if (t2 != null) {
                 new_t.add(t2);
-                new_startPos.add(new Integer(currentPos));
+                new_startPos.add(Integer.valueOf(currentPos));
                 new_lastNonSeparatorPos.add(currentPos);
             }
 
@@ -290,7 +347,7 @@ public final class FastMatcher {
      * @return the list of offset positions of the matches, an empty list if no match have been found
      */
     public List<OffsetPosition> matchLayoutToken(List<LayoutToken> tokens) {
-        return matchLayoutToken(tokens, true);
+        return matchLayoutToken(tokens, true, false);
     }
 
     /**
@@ -299,9 +356,10 @@ public final class FastMatcher {
      *
      * @param tokens the text to be processed as a list of LayoutToken objects
      * @param ignoreDelimiters if true, ignore the delimiters in the matching process
+     * @param caseSensitive: ensure case sensitive matching or not
      * @return the list of offset positions of the matches, an empty list if no match have been found
      */
-    public List<OffsetPosition> matchLayoutToken(List<LayoutToken> tokens, boolean ignoreDelimiters) {    
+    public List<OffsetPosition> matchLayoutToken(List<LayoutToken> tokens, boolean ignoreDelimiters, boolean caseSensitive) {    
         if (CollectionUtils.isEmpty(tokens)) {
             return new ArrayList<OffsetPosition>();
         }
@@ -323,7 +381,8 @@ public final class FastMatcher {
             }
 
             String tokenText = UnicodeUtil.normaliseText(token.getText());
-            tokenText = tokenText.toLowerCase();
+            if (!caseSensitive)
+                tokenText = tokenText.toLowerCase();
 
             // we try to complete opened matching
             int i = 0;
@@ -391,10 +450,28 @@ public final class FastMatcher {
      * All the matches are returned.
      *
      * @param text: the text to be processed
+     * @param caseSensitive: ensure case sensitive matching or not
      * @return the list of offset positions of the matches referred to the input string, an empty
      * list if no match have been found
      */
     public List<OffsetPosition> matchCharacter(String text) {
+        return matchCharacter(text, false);
+    }
+
+    /**
+     *
+     * Gives the character positions within a text where matches occur.
+     * <p>
+     * By iterating over the OffsetPosition and applying substring, we get all the matches.
+     * <p>
+     * All the matches are returned.
+     *
+     * @param text: the text to be processed
+     * @param caseSensitive: ensure case sensitive matching or not
+     * @return the list of offset positions of the matches referred to the input string, an empty
+     * list if no match have been found
+     */
+    public List<OffsetPosition> matchCharacter(String text, boolean caseSensitive) {
         List<OffsetPosition> results = new ArrayList<>();
         List<Integer> startPosition = new ArrayList<>();
         List<Integer> lastNonSeparatorPos = new ArrayList<>();
@@ -416,7 +493,8 @@ public final class FastMatcher {
                 currentPos += token.length();
                 continue;
             }*/
-            token = token.toLowerCase();
+            if (!caseSensitive) 
+                token = token.toLowerCase();
 
             // we try to complete opened matching
             int i = 0;
@@ -477,7 +555,7 @@ public final class FastMatcher {
         return results;
     }
 
-   /**
+    /**
      *
      * Gives the character positions within a tokenized text where matches occur.
      * <p>
@@ -488,6 +566,21 @@ public final class FastMatcher {
      * list if no match have been found
      */
     public List<OffsetPosition> matchCharacterLayoutToken(List<LayoutToken> tokens) {
+        return matchCharacterLayoutToken(tokens, false);
+    }
+
+   /**
+     *
+     * Gives the character positions within a tokenized text where matches occur.
+     * <p>
+     * All the matches are returned.
+     *
+     * @param tokens the text to be processed as a list of LayoutToken objects
+     * @param caseSensitive ensure case sensitive matching or not
+     * @return the list of offset positions of the matches referred to the input string, an empty
+     * list if no match have been found
+     */
+    public List<OffsetPosition> matchCharacterLayoutToken(List<LayoutToken> tokens, boolean caseSensitive) {
         List<OffsetPosition> results = new ArrayList<>();
         List<Integer> startPosition = new ArrayList<>();
         List<Integer> lastNonSeparatorPos = new ArrayList<>();
@@ -509,7 +602,9 @@ public final class FastMatcher {
                 currentPos++;
                 continue;
             }*/
-            String tokenString = token.getText().toLowerCase();
+            String tokenString = token.getText();
+            if (!caseSensitive)
+                tokenString = tokenString.toLowerCase();
 
             // we try to complete opened matching
             int i = 0;
@@ -578,12 +673,25 @@ public final class FastMatcher {
      * @return the list of offset positions of the matches, an empty list if no match have been found
      */
     public List<OffsetPosition> matcherPairs(List<Pair<String, String>> tokens) {
+        return matcherPairs(tokens, false);
+    }
+
+    /**
+     * Identify terms in a piece of text and gives corresponding token positions.
+     * All the matches are returned. This case correspond to text from a trainer,
+     * where the text is already tokenized with some labeled that can be ignored.
+     *
+     * @param tokens: the text to be processed
+     * @param caseSensitive: ensure case sensitive matching or not
+     * @return the list of offset positions of the matches, an empty list if no match have been found
+     */
+    public List<OffsetPosition> matcherPairs(List<Pair<String, String>> tokens, boolean caseSensitive) {
         StringBuilder text = new StringBuilder();
         for (Pair<String, String> tokenP : tokens) {
             String token = tokenP.getA();
             text.append(processToken(token));
         }
-        return matchToken(text.toString());
+        return matchToken(text.toString(), caseSensitive);
     }
 
     /**
