@@ -10,6 +10,7 @@ import org.grobid.core.data.BibDataSet;
 import org.grobid.core.exceptions.GrobidException;
 import org.grobid.core.sax.CrossrefUnixrefSaxParser;
 import org.grobid.core.utilities.crossref.*;
+import org.grobid.core.utilities.glutton.*;
 import org.grobid.core.utilities.counters.CntManager;
 
 import org.slf4j.Logger;
@@ -25,6 +26,7 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.List;
+import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.StringTokenizer;
 import java.util.Map;
@@ -35,7 +37,7 @@ import com.rockymadden.stringmetric.similarity.RatcliffObershelpMetric;
 import scala.Option;
 
 /**
- * Class for managing the extraction of bibliographical information from pdf documents.
+ * Singleton class for managing the extraction of bibliographical information from pdf documents.
  * When consolidation operations are realized, be sure to call the close() method
  * to ensure that all Executors are terminated.
  *
@@ -44,15 +46,74 @@ import scala.Option;
 public class Consolidation {
     private static final Logger LOGGER = LoggerFactory.getLogger(Consolidation.class);
 
+    private static volatile Consolidation instance;
+
     private CrossrefClient client = null;
     private WorkDeserializer workDeserializer = null;
     private CntManager cntManager = null;
 
-    public Consolidation(CntManager cntManager) {
+    public enum GrobidConsolidationService {
+        CROSSREF("crossref"),
+        GLUTTON("glutton");
+
+        private final String ext;
+
+        GrobidConsolidationService(String ext) {
+            this.ext = ext;
+        }
+
+        public String getExt() {
+            return ext;
+        }
+
+        public static GrobidConsolidationService get(String name) {
+            if (name == null) {
+                throw new IllegalArgumentException("Name of consolidation service must not be null");
+            }
+
+            String n = name.toLowerCase();
+            for (GrobidConsolidationService e : values()) {
+                if (e.name().toLowerCase().equals(n)) {
+                    return e;
+                }
+            }
+            throw new IllegalArgumentException("No consolidation service with name '" + name +
+                    "', possible values are: " + Arrays.toString(values()));
+        }
+    }
+
+    public static Consolidation getInstance() {
+        if (instance == null) {
+            getNewInstance();
+        }
+        return instance;
+    }
+
+    /**
+     * Creates a new instance.
+     */
+    private static synchronized void getNewInstance() {
+        LOGGER.debug("Get new instance of Consolidation");
+        instance = new Consolidation();
+    }
+
+    /**
+     * Hidden constructor
+     */
+    private Consolidation() {
+        if (GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.GLUTTON)
+            client = GluttonClient.getInstance();
+        else 
+            client = CrossrefClient.getInstance();
+        workDeserializer = new WorkDeserializer();   
+    }
+
+    public void setCntManager(CntManager cntManager) {
         this.cntManager = cntManager;
-        //client = new CrossrefClient();
-        client = CrossrefClient.getInstance();
-        workDeserializer = new WorkDeserializer();
+    }
+
+    public CntManager getCntManager() {
+        return this.cntManager;
     }
 
     /**
@@ -65,43 +126,16 @@ public class Consolidation {
     }
 
     /**
-     * Lookup by DOI - 3 parameters are id, password, doi.
-     */
-    private static final String DOI_BASE_QUERY =
-            "openurl?url_ver=Z39.88-2004&pid=%s:%s&rft_id=info:doi/%s&noredirect=true&format=unixref";
-
-    /**
-     * Lookup by journal title, volume and first page - 6 parameters are id, password, journal title, author, volume, firstPage.
-     */
-    private static final String JOURNAL_AUTHOR_BASE_QUERY =
-            //"query?usr=%s&pwd=%s&type=a&format=unixref&qdata=|%s||%s||%s|||KEY|";
-            "servlet/query?usr=%s&pwd=%s&type=a&format=unixref&qdata=|%s|%s|%s||%s|||KEY|";
-
-    // ISSN|TITLE/ABBREV|FIRST AUTHOR|VOLUME|ISSUE|START PAGE|YEAR|RESOURCE TYPE|KEY|DOI
-
-    /**
-     * Lookup by journal title, volume and first page - 6 parameters are id, password, journal title, volume, firstPage.
-     */
-    private static final String JOURNAL_BASE_QUERY =
-            //"query?usr=%s&pwd=%s&type=a&format=unixref&qdata=|%s||%s||%s|||KEY|";
-            "servlet/query?usr=%s&pwd=%s&type=a&format=unixref&qdata=|%s||%s||%s|||KEY|";
-
-    /**
-     * Lookup first author surname and  article title - 4 parameters are id, password, title, author.
-     */
-    private static final String TITLE_BASE_QUERY =
-            "servlet/query?usr=%s&pwd=%s&type=a&format=unixref&qdata=%s|%s||key|";
-
-
-    /**
-     * Try to consolidate one bibliographical object with crossref web services based on
+     * Try to consolidate one bibliographical object with crossref metadata lookup web services based on
      * core metadata
      */
-    public boolean consolidate(BiblioItem bib, List<BiblioItem> additionalBiblioInformation) throws Exception {
-        boolean result = false;
-        boolean valid = false;
+    public BiblioItem consolidate(BiblioItem bib, String rawCitation) throws Exception {
+        final List<BiblioItem> results = new ArrayList<BiblioItem>();
 
         String doi = bib.getDOI();
+        if (StringUtils.isNotBlank(doi)) {
+            doi = cleanDoi(doi);
+        }
         String aut = bib.getFirstAuthorSurname();
         String title = bib.getTitle();
         String journalTitle = bib.getJournal();
@@ -122,7 +156,7 @@ public class Consolidation {
                 firstPage = pageRange;
         }
 
-        if (aut != null) {
+        /*if (aut != null) {
             aut = TextUtilities.removeAccents(aut);
         }
         if (title != null) {
@@ -130,83 +164,207 @@ public class Consolidation {
         }
         if (journalTitle != null) {
             journalTitle = TextUtilities.removeAccents(journalTitle);
-        }
-        if (cntManager != null)
+        }*/
+        if (cntManager != null) 
             cntManager.i(ConsolidationCounters.CONSOLIDATION);
 
-        try {
-            if (StringUtils.isNotBlank(doi)) {
-                // retrieval per DOI
-                //System.out.println("test retrieval per DOI");
-                valid = consolidateCrossrefGetByDOI(bib, additionalBiblioInformation);
-            }  
-            if (!valid && StringUtils.isNotBlank(title)
-                    && StringUtils.isNotBlank(aut)) {
-                // retrieval per first author and article title
-                //additionalBiblioInformation.clear();
-                //System.out.println("test retrieval per title, author");
-                valid = consolidateCrossrefGetByAuthorTitle(aut, title, bib, additionalBiblioInformation);
-                /*if (!valid) {
-                    valid = consolidateCrossrefGetByAuthorTitleLibrary(aut, title, bib, additionalBiblioInformation);
-                }*/
+        long threadId = Thread.currentThread().getId();
+        Map<String, String> arguments = null;
+
+        if (StringUtils.isNotBlank(doi)) {
+            // call based on the identified DOI
+            arguments = new HashMap<String,String>();
+            arguments.put("doi", doi);
+        } 
+        if (StringUtils.isNotBlank(rawCitation)) {
+            // call with full raw string
+            if (arguments == null)
+                arguments = new HashMap<String,String>();
+            if ( (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) || 
+                     StringUtils.isBlank(doi) )
+                arguments.put("query.bibliographic", rawCitation);
+            //arguments.put("query", rawCitation);
+        }
+        if (StringUtils.isNotBlank(aut)) {
+            // call based on partial metadata
+            if (arguments == null)
+                arguments = new HashMap<String,String>();
+            if ( (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) || 
+                 (StringUtils.isBlank(rawCitation) && StringUtils.isBlank(doi)) )
+                arguments.put("query.author", aut);
+        }
+        if (StringUtils.isNotBlank(title)) {
+            // call based on partial metadata
+            if (arguments == null)
+                arguments = new HashMap<String,String>();
+            if ( (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) || 
+                (StringUtils.isBlank(rawCitation) && StringUtils.isBlank(doi)) )
+                arguments.put("query.title", title);
+        }
+        if (StringUtils.isNotBlank(journalTitle)) {
+            // call based on partial metadata
+            if (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) {
+                if (arguments == null)
+                    arguments = new HashMap<String,String>();
+                arguments.put("query.container-title", journalTitle);
             }
-
-
-
-            /*if (!valid && StringUtils.isNotBlank(journalTitle)
-                    && StringUtils.isNotBlank(volume)
-                    && StringUtils.isNotBlank(aut)
-                    && StringUtils.isNotBlank(firstPage)) {
-                // retrieval per journal title, author, volume, first page
-                //System.out.println("test retrieval per journal title, author, volume, first page");
-                additionalBiblioInformation.clear();
-                valid = consolidateCrossrefGetByJournalVolumeFirstPage(aut, firstPage, journalTitle,
-                        volume, bib, additionalBiblioInformation);
-            }*/
-            /*if (!valid && StringUtils.isNotBlank(journalTitle) 
-                        && StringUtils.isNotBlank(volume)
-                        && StringUtils.isNotBlank(firstPage)) {
-                // retrieval per journal title, volume, first page
-                additionalBiblioInformation.clear();
-                //System.out.println("test retrieval per journal title, volume, first page");
-                valid = consolidateCrossrefGetByJournalVolumeFirstPage(null, firstPage, journalTitle, 
-                    volume, bib, additionalBiblioInformation);
-            }*/
-        } catch (Exception e) {
-            throw new GrobidException("An exception occured while running Grobid consolidation.", e);
+        }
+        if (StringUtils.isNotBlank(volume)) {
+            // call based on partial metadata
+            if (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) {
+                if (arguments == null)
+                    arguments = new HashMap<String,String>();
+                arguments.put("volume", volume);
+            }
+        }
+        if (StringUtils.isNotBlank(firstPage)) {
+            // call based on partial metadata
+            if (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) {
+                if (arguments == null)
+                    arguments = new HashMap<String,String>();
+                arguments.put("firstPage", firstPage);
+            }
         }
 
-        if (valid && (cntManager != null))
-            cntManager.i(ConsolidationCounters.CONSOLIDATION_SUCCESS);
-        return valid;
+        if (arguments == null || arguments.size() == 0) {
+            return null;
+        }
+
+        if (GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.CROSSREF) {
+            if (StringUtils.isBlank(doi) && StringUtils.isBlank(rawCitation) && 
+                 (StringUtils.isBlank(aut) || StringUtils.isBlank(title)) ) {
+                // there's not enough information for a crossref request, which might always return a result
+                return null;
+            }
+        }
+
+        if (GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.CROSSREF) {
+            arguments.put("rows", "1"); // we just request the top-one result
+        } else if (GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.GLUTTON) {
+            if (StringUtils.isNotBlank(doi))
+                arguments.put("postValidate", "false");
+            // GROBID has already parsed the reference, so no need to redo this in glutton
+            arguments.put("parseReference", "false");
+        }
+
+        final boolean doiQuery;
+        try {
+            //CrossrefRequestListener<BiblioItem> requestListener = new CrossrefRequestListener<BiblioItem>();
+            if (cntManager != null) {
+                cntManager.i(ConsolidationCounters.CONSOLIDATION);
+            }
+
+            if ( StringUtils.isNotBlank(doi) && (cntManager != null) ) {
+                cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI);
+                doiQuery = true;
+            } else {
+                doiQuery = false;
+            }
+
+            client.<BiblioItem>pushRequest("works", arguments, workDeserializer, threadId, new CrossrefRequestListener<BiblioItem>(0) {
+                
+                @Override
+                public void onSuccess(List<BiblioItem> res) {
+                    if ((res != null) && (res.size() > 0) ) {
+                        // we need here to post-check that the found item corresponds
+                        // correctly to the one requested in order to avoid false positive
+                        for(BiblioItem oneRes : res) {
+                            /* 
+                              Glutton integrates its own post-validation, so we can skip post-validation in GROBID when it is used as 
+                              consolidation service.  
+
+                              In case of crossref REST API, for single bib. ref. consolidation (this case comes only for header extraction), 
+                              having an extracted DOI matching is considered safe enough, and we don't require further post-validation.
+
+                              For all the other case of matching with CrossRef, we require a post-validation. 
+                            */
+                            if ((GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.GLUTTON) 
+                                ||
+                                ( (GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.CROSSREF) && 
+                                  (doiQuery) ) 
+                                ||
+                                postValidation(bib, oneRes)) {
+                                results.add(oneRes);
+                                if (cntManager != null) {
+                                    cntManager.i(ConsolidationCounters.CONSOLIDATION_SUCCESS);
+                                    if (doiQuery)
+                                        cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI_SUCCESS);
+                                }
+                                break;
+                            }
+                        }
+                    } 
+                }
+
+                @Override
+                public void onError(int status, String message, Exception exception) {
+                    LOGGER.info("Consolidation service returns error ("+status+") : "+message);
+                }
+            });
+        } catch(Exception e) {
+            LOGGER.info("Consolidation error - " + ExceptionUtils.getStackTrace(e));
+        } 
+
+        client.finish(threadId);
+        if (results.size() == 0)
+            return null;
+        else
+            return results.get(0);
     }
 
 
     /**
-     * Try tp consolidate a list of bibliographical objects in one operation with CrossRef web services
+     * Try tp consolidate a list of bibliographical objects in one operation with consolidation services
      */
-    public Map<Integer,BiblioItem> consolidate(List<BibDataSet> biblios) {    
+    public Map<Integer,BiblioItem> consolidate(List<BibDataSet> biblios) {   
         if (CollectionUtils.isEmpty(biblios))
             return null;
-
         final Map<Integer,BiblioItem> results = new HashMap<Integer,BiblioItem>();
         // init the results
         int n = 0;
         for(n=0; n<biblios.size(); n++) {
-            results.put(new Integer(n), null);
+            results.put(Integer.valueOf(n), null);
         }
         n = 0;
         long threadId = Thread.currentThread().getId();
         for(BibDataSet bibDataSet : biblios) {
             final BiblioItem theBiblio = bibDataSet.getResBib();
 
+            if (cntManager != null) 
+                cntManager.i(ConsolidationCounters.TOTAL_BIB_REF);
+
             // first we get the exploitable metadata
             String doi = theBiblio.getDOI();
+            if (StringUtils.isNotBlank(doi)) {
+                doi = cleanDoi(doi);
+            }
             String aut = theBiblio.getFirstAuthorSurname();
             String title = theBiblio.getTitle();
             String journalTitle = theBiblio.getJournal();
            
-            if (aut != null) {
+            // and the row string
+            String rawCitation = bibDataSet.getRawBib();
+
+            Map<String, String> arguments = null;
+
+            String volume = theBiblio.getVolume();
+            if (StringUtils.isBlank(volume))
+                volume = theBiblio.getVolumeBlock();
+
+            String firstPage = null;
+            String pageRange = theBiblio.getPageRange();
+            int beginPage = theBiblio.getBeginPage();
+            if (beginPage != -1) {
+                firstPage = "" + beginPage;
+            } else if (pageRange != null) {
+                StringTokenizer st = new StringTokenizer(pageRange, "--");
+                if (st.countTokens() == 2) {
+                    firstPage = st.nextToken();
+                } else if (st.countTokens() == 1)
+                    firstPage = pageRange;
+            }
+
+            /*if (aut != null) {
                 aut = TextUtilities.removeAccents(aut);
             }
             if (title != null) {
@@ -214,49 +372,115 @@ public class Consolidation {
             }
             if (journalTitle != null) {
                 journalTitle = TextUtilities.removeAccents(journalTitle);
-            }
-
-            Map<String, String> arguments = null;
-
-            // request id
-            //final int id = n;
+            }*/
 
             if (StringUtils.isNotBlank(doi)) {
                 // call based on the identified DOI
-                doi = cleanDoi(doi);
-                arguments = null;
-            } else if (StringUtils.isNotBlank(title) && StringUtils.isNotBlank(aut)) {
-                // call based on partial metadata
-                doi = null;
                 arguments = new HashMap<String,String>();
-                arguments.put("query.title", title);
-                arguments.put("query.author", aut);
-                if (StringUtils.isNotBlank(journalTitle))
-                     arguments.put("query.container-title", journalTitle);
-
-                arguments.put("rows", "1"); // we just request the top-one result
+                arguments.put("doi", doi);
             } 
-
-            if ((doi == null) && (arguments == null)) {
-                //results.put(new Integer(n), null);
+            if (StringUtils.isNotBlank(rawCitation)) {
+                // call with full raw string
+                if (arguments == null)
+                    arguments = new HashMap<String,String>();
+                if ( (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) || 
+                     StringUtils.isBlank(doi) )
+                    arguments.put("query.bibliographic", rawCitation);
+            }
+            if (StringUtils.isNotBlank(title)) {
+                // call based on partial metadata
+                if (arguments == null)
+                    arguments = new HashMap<String,String>();
+                if ( (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) || 
+                     (StringUtils.isBlank(rawCitation) && StringUtils.isBlank(doi)) )
+                    arguments.put("query.title", title);
+            }
+            if (StringUtils.isNotBlank(aut)) {
+                // call based on partial metadata
+                if (arguments == null)
+                    arguments = new HashMap<String,String>();
+                if ( (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) || 
+                     (StringUtils.isBlank(rawCitation) && StringUtils.isBlank(doi)) )
+                    arguments.put("query.author", aut);
+            }
+            if (StringUtils.isNotBlank(journalTitle)) {
+                // call based on partial metadata
+                if (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) {
+                    if (arguments == null)
+                        arguments = new HashMap<String,String>();
+                    arguments.put("query.container-title", journalTitle);
+                }
+            }
+            if (StringUtils.isNotBlank(volume)) {
+                // call based on partial metadata
+                if (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) {
+                    if (arguments == null)
+                        arguments = new HashMap<String,String>();
+                    arguments.put("volume", volume);
+                }
+            }
+            if (StringUtils.isNotBlank(firstPage)) {
+                // call based on partial metadata
+                if (GrobidProperties.getInstance().getConsolidationService() != GrobidConsolidationService.CROSSREF) {
+                    if (arguments == null)
+                        arguments = new HashMap<String,String>();
+                    arguments.put("firstPage", firstPage);
+                }
+            }
+            
+            if (arguments == null || arguments.size() == 0) {
                 n++;
                 continue;
             }
 
+            if (GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.CROSSREF) {
+                if (StringUtils.isBlank(doi) && StringUtils.isBlank(rawCitation) && 
+                     (StringUtils.isBlank(aut) || StringUtils.isBlank(title)) ) {
+                    // there's not enough information for a crossref request, which might always return a result
+                    n++;
+                    continue;
+                }
+            }
+
+            if (GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.CROSSREF)
+                arguments.put("rows", "1"); // we just request the top-one result
+            else if (GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.GLUTTON) {
+                // grobid is doing its own post-validation right now
+                //arguments.put("postValidate", "false");
+                // GROBID has already parsed the reference, so no need to redo this in glutton
+                arguments.put("parseReference", "false");
+            }
+
+            final boolean doiQuery;
             try {
                 //CrossrefRequestListener<BiblioItem> requestListener = new CrossrefRequestListener<BiblioItem>();
-                client.<BiblioItem>pushRequest("works", doi, arguments, workDeserializer, threadId, new CrossrefRequestListener<BiblioItem>(n) {
+                if (cntManager != null) {
+                    cntManager.i(ConsolidationCounters.CONSOLIDATION);
+                }
+
+                if ( StringUtils.isNotBlank(doi) && (cntManager != null) ) {
+                    cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI);
+                    doiQuery = true;
+                } else {
+                    doiQuery = false;
+                }
+
+                client.<BiblioItem>pushRequest("works", arguments, workDeserializer, threadId, new CrossrefRequestListener<BiblioItem>(n) {
                     
                     @Override
                     public void onSuccess(List<BiblioItem> res) {
-                        //System.out.println("Success request "+id);
-                        //System.out.println("size of results: " + res.size());
                         if ((res != null) && (res.size() > 0) ) {
                             // we need here to post-check that the found item corresponds
                             // correctly to the one requested in order to avoid false positive
                             for(BiblioItem oneRes : res) {
-                                if (postValidation(theBiblio, oneRes)) {
-                                    results.put(new Integer(getRank()), oneRes);
+                                if ((GrobidProperties.getInstance().getConsolidationService() == GrobidConsolidationService.GLUTTON) ||
+                                    postValidation(theBiblio, oneRes)) {
+                                    results.put(Integer.valueOf(getRank()), oneRes);
+                                    if (cntManager != null) {
+                                        cntManager.i(ConsolidationCounters.CONSOLIDATION_SUCCESS);
+                                        if (doiQuery)
+                                            cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI_SUCCESS);
+                                    }
                                     break;
                                 }
                             }
@@ -265,42 +489,21 @@ public class Consolidation {
 
                     @Override
                     public void onError(int status, String message, Exception exception) {
-                        LOGGER.info("ERROR ("+status+") : "+message);
-                        System.out.println("ERROR ("+status+") : "+message);
-                        //exception.printStackTrace();
+                        LOGGER.info("Consolidation service returns error ("+status+") : "+message);
                     }
                 });
             } catch(Exception e) {
-                LOGGER.error("Consolidation error - " + ExceptionUtils.getStackTrace(e));
-                //results.put(new Integer(id), null);
+                LOGGER.info("Consolidation error - " + ExceptionUtils.getStackTrace(e));
             } 
             n++;
         }
-//System.out.println("before finish, result size is " + results.size());
         client.finish(threadId);
-//System.out.println("after finish, result size is " + results.size());
-/*int consolidated = 0;
-for (Entry<Integer, BiblioItem> cursor : results.entrySet()) {
-System.out.println("item: " + cursor.getKey());
-if (cursor.getValue() != null) {
-System.out.println(cursor.getValue().toTEI(1));
-consolidated++;
-} 
-
-}
-System.out.println("total (CrossRef JSON search API): " + consolidated + " / " + results.size());*/
-
-// fallback with CrossRef metadata look-up web service
-
-/*if (cursor.getValue() != null) {
-    valid = consolidateCrossrefGetByAuthorTitleLibrary(aut, title, bib, additionalBiblioInformation);
-}*/
 
         return results;
     }
 
     /**
-     * Try to consolidate some uncertain bibliographical data with crossref web service based on
+     * Try to consolidate some uncertain bibliographical data with crossref REST API service based on
      * the DOI if it is around
      *
      * @param biblio the Biblio item to be consolidated
@@ -308,7 +511,7 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
      * @return Returns a boolean indicating if at least one bibliographical object
      * has been retrieved.
      */
-    public boolean consolidateCrossrefGetByDOI(BiblioItem biblio, List<BiblioItem> bib2) throws Exception {
+    /*public boolean consolidateCrossrefGetByDOI(BiblioItem biblio, List<BiblioItem> bib2) throws Exception {
         boolean result = false;
         String doi = biblio.getDOI();
 
@@ -318,10 +521,12 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
         if (StringUtils.isNotBlank(doi)) {
             // some cleaning of the doi
             doi = cleanDoi(doi);
+            Map<String, String> arguments = new HashMap<String,String>();
+            arguments.put("doi", doi);
 
             long threadId = Thread.currentThread().getId();
             CrossrefRequestListener<BiblioItem> requestListener = new CrossrefRequestListener<BiblioItem>();
-            client.<BiblioItem>pushRequest("works", doi, null, workDeserializer, threadId, requestListener);
+            client.<BiblioItem>pushRequest("works", arguments, workDeserializer, threadId, requestListener);
             if (cntManager != null)
                 cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI);
 
@@ -329,17 +534,17 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
                 try {
                     requestListener.wait(5000); // timeout after 5 seconds
                 } catch (InterruptedException e) {
-                    LOGGER.error("Timeout error - " + ExceptionUtils.getStackTrace(e));
+                    LOGGER.warn("Timeout error - " + ExceptionUtils.getStackTrace(e));
                 }
             }
             
             CrossrefRequestListener.Response<BiblioItem> response = requestListener.getResponse();
             
             if (response == null)
-                LOGGER.error("No response ! Maybe timeout.");
+                LOGGER.warn("No response ! Maybe timeout.");
             
             else if (response.hasError() || !response.hasResults())
-                LOGGER.error("error: ("+response.status+") : "+response.errorMessage);
+                LOGGER.warn("Consolidation service returns error ("+response.status+") : "+response.errorMessage);
             
             else { // success
                 LOGGER.info("Success request "+ doi);
@@ -352,7 +557,7 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
             }
         }
         return result;
-    }
+    }*/
 
     /**
      * Try to consolidate some uncertain bibliographical data with crossref web service based on
@@ -362,7 +567,7 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
      * @param biblioList the list of biblio items found as consolidations
      * @return Returns a boolean indicating whether at least one bibliographical object has been retrieved.
      */
-    public boolean consolidateCrossrefGetByAuthorTitle(String aut, String title,
+    /*public boolean consolidateCrossrefGetByAuthorTitle(String aut, String title,
                                                        final BiblioItem biblio, final List<BiblioItem> bib2) throws Exception {
         boolean result = false;
 
@@ -376,11 +581,13 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
             Map<String, String> arguments = new HashMap<String,String>();
             arguments.put("query.title", title);
             arguments.put("query.author", aut);
-            arguments.put("rows", "5"); // we just request the top-one result
+            arguments.put("rows", "1"); // we just request the top-one result
             
             long threadId = Thread.currentThread().getId();
             CrossrefRequestListener<BiblioItem> requestListener = new CrossrefRequestListener<BiblioItem>();
-            client.<BiblioItem>pushRequest("works", null, arguments, workDeserializer, threadId, new CrossrefRequestListener<BiblioItem>() {
+            if (cntManager != null) 
+                cntManager.i(ConsolidationCounters.CONSOLIDATION);
+            client.<BiblioItem>pushRequest("works", arguments, workDeserializer, threadId, new CrossrefRequestListener<BiblioItem>() {
                 
                 @Override
                 public void onSuccess(List<BiblioItem> res) {
@@ -390,6 +597,8 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
                         // correctly to the one requested in order to avoid false positive
                         for(BiblioItem oneRes : res) {
                             if (postValidation(biblio, oneRes)) {
+                                if (cntManager != null) 
+                                    cntManager.i(ConsolidationCounters.CONSOLIDATION_SUCCESS);
                                 bib2.add(oneRes);
                             }
                         }
@@ -398,261 +607,16 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
 
                 @Override
                 public void onError(int status, String message, Exception exception) {
-                    LOGGER.info("ERROR ("+status+") : "+message);
+                    LOGGER.warn("Consolidation service returns error ("+status+") : "+message);
                 }
             });
 
-            /*client.<BiblioItem>pushRequest("works", null, arguments, workDeserializer, requestListener);
-            if (cntManager != null)
-                cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI);
-
-            synchronized (requestListener) {
-                try {
-                    requestListener.wait(5000); // timeout after 5 seconds
-                } catch (InterruptedException e) {
-                    LOGGER.error("Timeout error - " + ExceptionUtils.getStackTrace(e));
-                }
-            }
-            
-            CrossrefRequestListener.Response<BiblioItem> response = requestListener.getResponse();
-            
-            if (response == null)
-                LOGGER.error("No response ! Maybe timeout.");
-            
-            else if (response.hasError() || !response.hasResults())
-                LOGGER.error("error: ("+response.status+") : "+response.errorMessage);
-            
-            else { // success
-                LOGGER.info("Success request "+ arguments.toString());
-                if (cntManager != null)
-                    cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI_SUCCESS);
-                for (BiblioItem bib : response.results) {
-                    if (postValidation(biblio, bib)) 
-                        bib2.add(bib);
-                    result = true;
-                }
-            }*/
-
-            for(BiblioItem bib : bib2) {
-                //System.out.println(bib.toTEI(0));
-            }
-
-            /*String subpath = String.format(TITLE_BASE_QUERY,
-                    GrobidProperties.getInstance().getCrossrefId(),
-                    GrobidProperties.getInstance().getCrossrefPw(),
-                    URLEncoder.encode(title, "UTF-8"),
-                    URLEncoder.encode(aut, "UTF-8"));
-            URL url = new URL("http://" + GrobidProperties.getInstance().getCrossrefHost() + "/" + subpath);
-
-            LOGGER.info("Sending: " + url.toString());
-            HttpURLConnection urlConn = null;
-            try {
-                urlConn = (HttpURLConnection) url.openConnection();
-            } catch (Exception e) {
-                try {
-                    urlConn = (HttpURLConnection) url.openConnection();
-                } catch (Exception e2) {
-                    urlConn = null;
-                    throw new GrobidException("An exception occured while running Grobid.", e2);
-                }
-            }
-            if (urlConn != null) {
-                try {
-                    urlConn.setDoOutput(true);
-                    urlConn.setDoInput(true);
-                    urlConn.setRequestMethod("GET");
-
-                    urlConn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-
-                    InputStream in = urlConn.getInputStream();
-                    String xml = TextUtilities.convertStreamToString(in);
-
-                    InputSource is = new InputSource();
-                    is.setCharacterStream(new StringReader(xml));
-
-                    DefaultHandler crossref = new CrossrefUnixrefSaxParser(bib2);
-
-                    // get a factory
-                    SAXParserFactory spf = SAXParserFactory.newInstance();
-                    //get a new instance of parser
-                    SAXParser parser = spf.newSAXParser();
-                    parser.parse(is, crossref);
-
-                    if (bib2.size() > 0) {
-                        if (!bib2.get(0).getError())
-                            result = true;
-                    }
-                } catch (Exception e) {
-                    LOGGER.error("Warning: Consolidation set true, " +
-                            "but the online connection to Crossref fails.");
-                } finally {
-                    urlConn.disconnect();
-                }
-            }*/
         }
         if (bib2.size() > originalSize)
             return true;
         else
             return false;
-    }
-
-    public boolean consolidateCrossrefGetByAuthorTitleLibrary(String aut, String title,
-                                                       BiblioItem biblio, List<BiblioItem> bib2) throws Exception {
-        boolean result = false;
-
-        if (bib2 == null)
-            return false;
-
-        // conservative check
-        if (StringUtils.isNotBlank(title) && StringUtils.isNotBlank(aut)) {
-            
-            String subpath = String.format(TITLE_BASE_QUERY,
-                    GrobidProperties.getInstance().getCrossrefId(),
-                    GrobidProperties.getInstance().getCrossrefPw(),
-                    URLEncoder.encode(title, "UTF-8"),
-                    URLEncoder.encode(aut, "UTF-8"));
-            URL url = new URL("http://" + GrobidProperties.getInstance().getCrossrefHost() + "/" + subpath);
-
-            LOGGER.info("Sending: " + url.toString());
-            HttpURLConnection urlConn = null;
-            try {
-                urlConn = (HttpURLConnection) url.openConnection();
-            } catch (Exception e) {
-                try {
-                    urlConn = (HttpURLConnection) url.openConnection();
-                } catch (Exception e2) {
-                    urlConn = null;
-                    throw new GrobidException("An exception occured while running Grobid.", e2);
-                }
-            }
-            if (urlConn != null) {
-                try {
-                    urlConn.setDoOutput(true);
-                    urlConn.setDoInput(true);
-                    urlConn.setRequestMethod("GET");
-
-                    urlConn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-
-                    InputStream in = urlConn.getInputStream();
-                    String xml = TextUtilities.convertStreamToString(in);
-
-                    InputSource is = new InputSource();
-                    is.setCharacterStream(new StringReader(xml));
-
-                    DefaultHandler crossref = new CrossrefUnixrefSaxParser(bib2);
-
-                    // get a factory
-                    SAXParserFactory spf = SAXParserFactory.newInstance();
-                    //get a new instance of parser
-                    SAXParser parser = spf.newSAXParser();
-                    parser.parse(is, crossref);
-
-                    if (bib2.size() > 0) {
-                        if (!bib2.get(0).getError())
-                            result = true;
-                    }
-                } catch (Exception e) {
-                    LOGGER.error("Warning: Consolidation set true, " +
-                            "but the online connection to Crossref fails.");
-                } finally {
-                    urlConn.disconnect();
-                }
-            }
-        }
-        return result;
-    }
-
-    /**
-     * Try to consolidate some uncertain bibliographical data with crossref web service based on
-     * the following core information: journal title, volume and first page.
-     * We use also the first author if it is there, it can help...
-     *
-     * @param biblio     the biblio item to be consolidated
-     * @param biblioList the list of biblio items found as consolidations
-     * @return Returns a boolean indicating if at least one bibliographical object
-     * has been retrieve.
-     */
-    public boolean consolidateCrossrefGetByJournalVolumeFirstPage(String aut,
-                                                                  String firstPage,
-                                                                  String journal,
-                                                                  String volume,
-                                                                  BiblioItem biblio,
-                                                                  List<BiblioItem> bib2) throws Exception {
-
-        boolean result = false;
-        // conservative check
-        if (StringUtils.isNotBlank(firstPage) &&
-                StringUtils.isNotBlank(journal) && StringUtils.isNotBlank(volume)
-                ) {
-            String subpath = null;
-            if (StringUtils.isNotBlank(aut))
-                subpath = String.format(JOURNAL_AUTHOR_BASE_QUERY,
-                        GrobidProperties.getInstance().getCrossrefId(),
-                        GrobidProperties.getInstance().getCrossrefPw(),
-                        URLEncoder.encode(journal, "UTF-8"),
-                        URLEncoder.encode(aut, "UTF-8"),
-                        URLEncoder.encode(volume, "UTF-8"),
-                        firstPage);
-            else
-                subpath = String.format(JOURNAL_BASE_QUERY,
-                        GrobidProperties.getInstance().getCrossrefId(),
-                        GrobidProperties.getInstance().getCrossrefPw(),
-                        URLEncoder.encode(journal, "UTF-8"),
-                        URLEncoder.encode(volume, "UTF-8"),
-                        firstPage);
-            URL url = new URL("http://" + GrobidProperties.getInstance().getCrossrefHost() + "/" + subpath);
-            String urlmsg = url.toString();
-            LOGGER.info(urlmsg);
-           
-            System.out.println("Sending: " + urlmsg);
-            HttpURLConnection urlConn = null;
-            try {
-                urlConn = (HttpURLConnection) url.openConnection();
-            } catch (Exception e) {
-                try {
-                    urlConn = (HttpURLConnection) url.openConnection();
-                } catch (Exception e2) {
-                    urlConn = null;
-                    throw new GrobidException("An exception occured while running Grobid.", e2);
-                }
-            }
-            if (urlConn != null) {
-
-                urlConn.setDoOutput(true);
-                urlConn.setDoInput(true);
-                urlConn.setRequestMethod("GET");
-
-                urlConn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-                InputStream in = null;
-                try {
-                    in = urlConn.getInputStream();
-
-                    String xml = TextUtilities.convertStreamToString(in);
-
-                    InputSource is = new InputSource();
-                    is.setCharacterStream(new StringReader(xml));
-
-                    DefaultHandler crossref = new CrossrefUnixrefSaxParser(bib2);
-
-                    // get a factory
-                    SAXParserFactory spf = SAXParserFactory.newInstance();
-                    //get a new instance of parser
-                    SAXParser p = spf.newSAXParser();
-                    p.parse(is, crossref);
-                    if (bib2.size() > 0 && !bib2.get(0).getError()) {
-                        result = true;
-                    }
-                } catch (Exception e) {
-                    LOGGER.error("Warning: Consolidation set true, " +
-                            "but the online connection to Crossref fails.");
-                } finally {
-                    IOUtils.closeQuietly(in);
-                    urlConn.disconnect();
-                }
-            }
-        }
-        return result;
-    }
+    }*/
 
     /**
      * This is a DOI cleaning specifically adapted to CrossRef call
@@ -681,11 +645,11 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
         boolean valid = true;
 
         // check main metadata available in source with fuzzy matching
-        if (!StringUtils.isBlank(source.getTitle()) && !StringUtils.isBlank(source.getTitle())) {
+        /*if (!StringUtils.isBlank(source.getTitle()) && !StringUtils.isBlank(source.getTitle())) {
 //System.out.println(source.getTitle() + " / " + result.getTitle() + " = " + ratcliffObershelpDistance(source.getTitle(), result.getTitle(), false));      
             if (ratcliffObershelpDistance(source.getTitle(), result.getTitle(), false) < 0.8)
                 return false;
-        }
+        }*/
 
         if (!StringUtils.isBlank(source.getFirstAuthorSurname()) && 
             !StringUtils.isBlank(result.getFirstAuthorSurname())) {
