@@ -1,10 +1,8 @@
 package org.grobid.core.utilities;
 
-import com.google.common.collect.Iterators;
-import com.google.common.collect.PeekingIterator;
 import org.apache.commons.lang3.StringUtils;
+import org.grobid.core.analyzers.GrobidAnalyzer;
 import org.grobid.core.exceptions.GrobidException;
-import org.grobid.core.features.FeatureFactory;
 import org.grobid.core.layout.LayoutToken;
 import org.grobid.core.lexicon.Lexicon;
 
@@ -18,8 +16,6 @@ import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import static org.apache.commons.lang3.StringUtils.trim;
-
 /**
  * Class for holding static methods for text processing.
  *
@@ -28,7 +24,7 @@ import static org.apache.commons.lang3.StringUtils.trim;
 public class TextUtilities {
 
     public static final String punctuations = " •*,:;?.!)-−–\"“”‘’'`$]*\u2666\u2665\u2663\u2660\u00A0";
-    public static final String fullPunctuations = "([ •*,:;?.!/)-−–‐\"“”‘’'`$]*\u2666\u2665\u2663\u2660\u00A0";
+    public static final String fullPunctuations = "(（[ •*,:;?.!/)）-−–‐«»„\"“”‘’'`$]*\u2666\u2665\u2663\u2660\u00A0";
     public static final String restrictedPunctuations = ",:;?.!/-–«»„\"“”‘’'`*\u2666\u2665\u2663\u2660";
     public static String delimiters = "\n\r\t\f\u00A0" + fullPunctuations;
 
@@ -53,17 +49,17 @@ public class TextUtilities {
 
     // the magical DOI regular expression...
     static public final Pattern DOIPattern = Pattern
-            .compile("(10\\.\\d{4,5}\\/[\\S]+[^;,.\\s])");
+        .compile("(10\\.\\d{4,5}\\/[\\S]+[^;,.\\s])");
 
     // a regular expression for arXiv identifiers
     // see https://arxiv.org/help/arxiv_identifier and https://arxiv.org/help/arxiv_identifier_for_services
     static public final Pattern arXivPattern = Pattern
-            .compile("(arXiv\\s?(\\.org)?\\s?\\:\\s?\\d{4}\\s?\\.\\s?\\d{4,5}(v\\d+)?)|(arXiv\\s?(\\.org)?\\s?\\:\\s?[ a-zA-Z\\-\\.]*\\s?/\\s?\\d{7}(v\\d+)?)");
+        .compile("(arXiv\\s?(\\.org)?\\s?\\:\\s?\\d{4}\\s?\\.\\s?\\d{4,5}(v\\d+)?)|(arXiv\\s?(\\.org)?\\s?\\:\\s?[ a-zA-Z\\-\\.]*\\s?/\\s?\\d{7}(v\\d+)?)");
 
     // a regular expression for identifying url pattern in text
     // TODO: maybe find a better regex 
     static public final Pattern urlPattern = Pattern
-            .compile("(?i)(https?|ftp)\\s?:\\s?//\\s?[-A-Z0-9+&@#/%?=~_()|!:,.;]*[-A-Z0-9+&@#/%=~_()|]");
+        .compile("(?i)(https?|ftp)\\s?:\\s?//\\s?[-A-Z0-9+&@#/%?=~_()|!:,.;]*[-A-Z0-9+&@#/%=~_()|]");
 
     /**
      * Replace numbers in the string by a dummy character for string distance evaluations
@@ -97,64 +93,130 @@ public class TextUtilities {
         return res;
     }
 
-    public static String dehyphenize(List<LayoutToken> tokens) {
-        PeekingIterator<LayoutToken> it = Iterators.peekingIterator(tokens.iterator());
-        StringBuilder sb = new StringBuilder();
-        boolean normalized = false;
+    public static List<LayoutToken> dehyphenize(List<LayoutToken> tokens) {
+        List<LayoutToken> output = new ArrayList<>();
 
-        LayoutToken prev = null;
-        while (it.hasNext()) {
-            LayoutToken cur = it.next();
-            //the current token is dash, next is new line, and previous one is some sort of word
-            if (cur.isNewLineAfter() && cur.getText().equals("-") && prev != null && !prev.getText().trim().isEmpty()) {
-                it.next();
-                if (it.hasNext()) {
-                    LayoutToken next = it.next();
-                    if (next.getText().equals("conjugated") || prev.getText().equals("anti")) {
-                        sb.append("-");
+        for (int i = 0; i < tokens.size(); i++) {
+            LayoutToken currentToken = tokens.get(i);
+            //the current token is dash checking what's around
+            if (currentToken.getText().equals("-")) {
+                if (doesRequireDehypenisation(tokens, i)) {
+                    //Cleanup eventual additional spaces before the hypen that have been already written to the output
+                    int z = output.size() - 1;
+                    while (z >= 0 && output.get(z).getText().equals(" ")) {
+                        String tokenString = output.get(z).getText();
+
+                        if (tokenString.equals(" ")) {
+                            output.remove(z);
+                        }
+                        z--;
                     }
-                    sb.append(StringUtils.trim(next.getText()));
-                    normalized = true;
+
+
+                    List<Integer> breakLines = new ArrayList<>();
+                    List<Integer> spaces = new ArrayList<>();
+
+                    int j = i + 1;
+                    while (j < tokens.size() && tokens.get(j).getText().equals(" ") || tokens.get(j).getText().equals("\n")) {
+                        String tokenString = tokens.get(j).getText();
+
+                        if (tokenString.equals("\n")) {
+                            breakLines.add(j);
+                        }
+                        if (tokenString.equals(" ")) {
+                            spaces.add(j);
+                        }
+                        j++;
+                    }
+                    i += breakLines.size() + spaces.size();
+                } else {
+                    output.add(currentToken);
+
+                    List<Integer> breakLines = new ArrayList<>();
+                    List<Integer> spaces = new ArrayList<>();
+
+                    int j = i + 1;
+                    while (j < tokens.size() && tokens.get(j).getText().equals("\n")) {
+                        String tokenString = tokens.get(j).getText();
+
+                        if (tokenString.equals("\n")) {
+                            breakLines.add(j);
+                        }
+                        j++;
+                    }
+                    i += breakLines.size() + spaces.size();
+
                 }
             } else {
-                sb.append(cur.getText());
+                output.add(currentToken);
             }
-            prev = cur;
+        }
+        return output;
+    }
+
+    /**
+     * Check if the current token (place i), or the hypen, needs to be removed or not.
+     * <p>
+     * It will check the tokens before and after. It will get to the next "non space" tokens and verify
+     * that it's a plain word. If it's not it's keeping the hypen.
+     * <p>
+     * TODO: add the check on the bounding box of the next token to see whether there is really a break line.
+     * TODO: What to do in case of a punctuation is found?
+     */
+    protected static boolean doesRequireDehypenisation(List<LayoutToken> tokens, int i) {
+        boolean forward = false;
+        boolean backward = false;
+
+        int j = i + 1;
+        int breakLine = 0;
+        while (j < tokens.size() && (tokens.get(j).getText().equals(" ") || tokens.get(j).getText().equals("\n"))) {
+            String tokenString = tokens.get(j).getText();
+
+            if (tokenString.equals("\n")) {
+                breakLine++;
+            }
+            j++;
         }
 
-        /*if (normalized) {
-            System.out.println("NORMALIZED: " + sb.toString());
-        }*/
-        return sb.toString();
+        if (breakLine == 0) {
+            return false;
+        }
+
+        Pattern onlyLowercaseLetters = Pattern.compile("[a-z]+");
+
+        if (j < tokens.size()) {
+            Matcher matcher = onlyLowercaseLetters.matcher(tokens.get(j).getText());
+            if (matcher.find()) {
+                forward = true;
+            }
+
+            if (forward) {
+                if(i < 1) {
+                    //If nothing before the hypen, but it looks like a forward hypenisation, let's trust it 
+                    return forward;
+                }
+                
+                int z = i - 1;
+                while (z > 0 && tokens.get(z).getText().equals(" ")) {
+                    z--;
+                }
+
+                Matcher backwardMatcher = Pattern.compile("^[A-Za-z]+$").matcher(tokens.get(z).getText());
+                if (backwardMatcher.find()) {
+                    backward = true;
+                }
+            }
+        }
+
+        return backward;
     }
 
     public static String dehyphenize(String text) {
-        if (text == null)
-            return null;
-        String res = "";
-        StringTokenizer st = new StringTokenizer(text, "-");
+        GrobidAnalyzer analyser = GrobidAnalyzer.getInstance();
 
-        boolean firstStep = true;
-        while (st.hasMoreTokens()) {
-            String section = st.nextToken();
+        final List<LayoutToken> layoutTokens = analyser.tokenizeWithLayoutToken(text);
 
-            if (firstStep) {
-                res += trim(section);
-                firstStep = false;
-            } else {
-                String firstToken = getFirstToken(section);
-                if (firstToken.contains("\n")) {
-                    res += trim(section);
-                } else {
-                    res += "-" + trim(section);
-                }
-            }
-        }
-
-        res = res.replace(" . ", ". ");
-        res = res.replace("  ", SPACE);
-
-        return res.trim();
+        return LayoutTokensUtil.toText(dehyphenize(layoutTokens));
     }
 
     public static String getLastToken(String section) {
@@ -182,7 +244,7 @@ public class TextUtilities {
             return getFirstToken(section.substring(1, section.length()));
         } else if (firstSpaceIndex != -1) {
             return section.substring(0, firstSpaceIndex);
-        } else  {
+        } else {
             return section.substring(0, section.length());
         }
     }
@@ -229,7 +291,7 @@ public class TextUtilities {
                     Lexicon lex = Lexicon.getInstance();
 
                     if (lex.inDictionary(hyphenToken.toLowerCase()) &
-                            !(test_digit(hyphenToken))) {
+                        !(test_digit(hyphenToken))) {
                         // if yes, it is hyphenization
                         res += firstToken;
                         section = section.substring(firstToken.length(), section.length());
@@ -469,7 +531,7 @@ public class TextUtilities {
 
     // ad hoc stopword list for the cleanField method
     public final static List<String> stopwords =
-            Arrays.asList("the", "of", "and", "du", "de le", "de la", "des", "der", "an", "und");
+        Arrays.asList("the", "of", "and", "du", "de le", "de la", "des", "der", "an", "und");
 
     /**
      * Remove useless punctuation at the end and beginning of a metadata field.
@@ -491,14 +553,14 @@ public class TextUtilities {
         for (int i = input.length() - 1; i > 0; i--) {
             char c = input.charAt(i);
             if ((c == ',') ||
-                    (c == ' ') ||
-                    (c == '.') ||
-                    (c == '-') ||
-                    (c == '_') ||
-                    (c == '/') ||
-                    //(c == ')') ||
-                    //(c == '(') ||
-                    (c == ':')) {
+                (c == ' ') ||
+                (c == '.') ||
+                (c == '-') ||
+                (c == '_') ||
+                (c == '/') ||
+                //(c == ')') ||
+                //(c == '(') ||
+                (c == ':')) {
                 n = i;
             } else if (c == ';') {
                 // we have to check if we have an html entity finishing
@@ -537,14 +599,14 @@ public class TextUtilities {
         for (int i = 0; i < input.length(); i++) {
             char c = input.charAt(i);
             if ((c == ',') ||
-                    (c == ' ') ||
-                    (c == '.') ||
-                    (c == ';') ||
-                    (c == '-') ||
-                    (c == '_') ||
-                    //(c == ')') ||
-                    //(c == '(') ||
-                    (c == ':')) {
+                (c == ' ') ||
+                (c == '.') ||
+                (c == ';') ||
+                (c == '-') ||
+                (c == '_') ||
+                //(c == ')') ||
+                //(c == '(') ||
+                (c == ':')) {
                 n = i;
             } else break;
         }
@@ -556,8 +618,8 @@ public class TextUtilities {
         }
 
         if ((input.length() > 12) &&
-                (input.endsWith("&quot;")) &&
-                (input.startsWith("&quot;"))) {
+            (input.endsWith("&quot;")) &&
+            (input.startsWith("&quot;"))) {
             input = input.substring(6, input.length() - 6).trim();
         }
 
@@ -728,7 +790,7 @@ public class TextUtilities {
                         if (fullHTML) {
                             // Not 7 Bit use the unicode system
                             sb.append("&#");
-                            sb.append(new Integer(ci).toString());
+                            sb.append(Integer.valueOf(ci).toString());
                             sb.append(';');
                         } else
                             sb.append(c);
@@ -747,11 +809,11 @@ public class TextUtilities {
     }
 
     /*
-      * To convert the InputStream to String we use the BufferedReader.readLine()
-      * method. We iterate until the BufferedReader return null which means
-      * there's no more data to read. Each line will appended to a StringBuilder
-      * and returned as String.
-      */
+     * To convert the InputStream to String we use the BufferedReader.readLine()
+     * method. We iterate until the BufferedReader return null which means
+     * there's no more data to read. Each line will appended to a StringBuilder
+     * and returned as String.
+     */
     static public String convertStreamToString(InputStream is) {
         BufferedReader reader = new BufferedReader(new InputStreamReader(is));
         StringBuilder sb = new StringBuilder();
@@ -974,14 +1036,14 @@ public class TextUtilities {
 
     public static String formatTwoDecimals(double d) {
         NumberFormat nf = NumberFormat.getNumberInstance(Locale.US);
-        DecimalFormat df = (DecimalFormat)nf;
+        DecimalFormat df = (DecimalFormat) nf;
         df.applyPattern("#.##");
         return df.format(d);
     }
 
     public static String formatFourDecimals(double d) {
         NumberFormat nf = NumberFormat.getNumberInstance(Locale.US);
-        DecimalFormat df = (DecimalFormat)nf;
+        DecimalFormat df = (DecimalFormat) nf;
         df.applyPattern("#.####");
         return df.format(d);
     }
@@ -1194,12 +1256,12 @@ public class TextUtilities {
      * @throws Exception
      */
     public static int getNbTokens(String line, int currentLinePos, List<String> tokenization)
-            throws Exception {
+        throws Exception {
         if ((line == null) || (line.length() == 0))
             return 0;
         String currentToken = tokenization.get(currentLinePos);
         while ((currentLinePos < tokenization.size()) &&
-                (currentToken.equals(" ") || currentToken.equals("\n"))) {
+            (currentToken.equals(" ") || currentToken.equals("\n"))) {
             currentLinePos++;
             currentToken = tokenization.get(currentLinePos);
         }
@@ -1224,10 +1286,10 @@ public class TextUtilities {
      */
     public static String trimEncodedCharaters(String string) {
         return string.replaceAll("&amp\\s+;", "&amp;").
-                replaceAll("&quot\\s+;|&amp;quot\\s*;", "&quot;").
-                replaceAll("&lt\\s+;|&amp;lt\\s*;", "&lt;").
-                replaceAll("&gt\\s+;|&amp;gt\\s*;", "&gt;").
-                replaceAll("&apos\\s+;|&amp;apos\\s*;", "&apos;");
+            replaceAll("&quot\\s+;|&amp;quot\\s*;", "&quot;").
+            replaceAll("&lt\\s+;|&amp;lt\\s*;", "&lt;").
+            replaceAll("&gt\\s+;|&amp;gt\\s*;", "&gt;").
+            replaceAll("&apos\\s+;|&amp;apos\\s*;", "&apos;");
     }
 
     public static boolean filterLine(String line) {
@@ -1237,8 +1299,8 @@ public class TextUtilities {
         else if (line.contains("@IMAGE") || line.contains("@PAGE")) {
             filter = true;
         } else if (line.contains(".pbm") || line.contains(".ppm") ||
-                line.contains(".vec") || line.contains(".jpg") ||
-                line.contains(".png")) {
+            line.contains(".svg") || line.contains(".jpg") ||
+            line.contains(".png")) {
             filter = true;
         }
         return filter;
@@ -1295,7 +1357,7 @@ public class TextUtilities {
 
     public static String strrep(char c, int times) {
         StringBuilder builder = new StringBuilder();
-        for(int i=0; i<times; i++) {
+        for (int i = 0; i < times; i++) {
             builder.append(c);
         }
         return builder.toString();
@@ -1326,12 +1388,13 @@ public class TextUtilities {
     }
 
     /**
-     * Useful for recognising an acronym candidate: check if a text is only 
+     * Useful for recognising an acronym candidate: check if a text is only
      * composed of upper case, dot and digit characters
      */
     public static boolean isAllUpperCaseOrDigitOrDot(String text) {
         for (int i = 0; i < text.length(); i++) {
-            if (!Character.isUpperCase(text.charAt(i)) && !Character.isDigit(text.charAt(i))) {
+            final char charAt = text.charAt(i);
+            if (!Character.isUpperCase(charAt) && !Character.isDigit(charAt) && charAt != '.') {
                 return false;
             }
         }
